# Project-Maker

./: .gitignore  CONTEXT.md  README.md  SECURITY.md  future_scaling.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
docs/: project-maker-user-guide.html  testing-checkpoints.md  windows-code-signing.md
docs/adr/: 0001-offline-first-tauri-sqlite.md
docs/codebase-architecture-refactor/: design.md
docs/project-intake-app/: plan.md
scripts/: Get-ReleaseSecurityReport.ps1
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/nsis/: Hungarian.nsh
src/app/: viewTypes.ts
src/data/: checklist.ts  types.ts
src/features/export/: ExportPresetSelect.tsx  exportPreset.ts
src/features/project-detail/: ProjectDetailView.test.tsx  ProjectDetailView.tsx  detailTypes.ts  detailUi.tsx
src/features/project-detail/tabs/: ChecklistTab.tsx  CockpitTab.tsx  DecisionTab.tsx  FollowUpsTab.tsx  InterviewTab.tsx  OverviewTab.tsx
src/features/projects/: ProjectTable.test.tsx  ProjectTable.tsx
src/lib/: export.ts  exportPlan.test.ts  exportPlan.ts  project.test.ts  project.ts  storage.test.ts  storage.ts  storageAdapters.ts  storageTypes.ts
src/test/: builders.ts  setup.ts
src/ui/: common.tsx
