[package]
name = "project-maker"
version = "0.1.2"
description = "Offline-first IT projektindítási igényfelmérő alkalmazás"
authors = ["Project Maker"]
edition = "2021"

[lib]
name = "project_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
